# FL_project

./: .gitignore  README.md  app.py  plot_results.py  prepare_data.py  pyproject.toml  requirements.txt
fertility_fl/: client_app.py  client_app_dp.py  model.py  security.py  server_app.py  task.py
